<resources>
    <string name="app_name">My Application</string>
    <string name="Login">登录</string>
    <string name="Login_hint">请输入用户名</string>
    <string name="Login_hint_1">请输入密码</string>
    <string name="Login_2">立即注册</string>
    <string name="Login_3">立即登录</string>
    <string name="Login_4">记住密码</string>
    <string name="Relogin">注册</string>
    <string name="Relogin_1">立即注册</string>
    <string name="Navigation">首页</string>
    <string name="Navigation_1">购物车</string>
    <string name="Navigation_2">订单</string>
    <string name="Navigation_3">我的</string>
    <string name="Details">详情</string>
    <string name="Details_1">商品信息：</string>
    <string name="Details_2">书籍名称:《微积分教程》</string>
    <string name="Details_3">品相：良好，书页无破损，封面有轻微磨损。</string>
    <string name="Details_4">封面：完整，色彩鲜艳。</string>
    <string name="Details_5">页码：所有页码齐全，无缺页。</string>
    <string name="Details_6">内容简介:</string>
    <string name="Details_7">本书是微积分的基础教程，适合初学者和需要复习的学生。书中详细介绍了微积分的基本概念、定理及其应用，包括极限、导数、积分等内容。</string>
    <string name="add">加入购物车</string>
    <string name="sum">合计:</string>
    <string name="final_sum">结算</string>

    <string name="page_1">嘿嘿！成功登录啦！</string>
    <string name="page_2">开始你的探索吧！</string>
    <string name="page_3">有什么不足尽管提出！</string>
    <string name="page_4">快点击下一步，开始使用！</string>

    <string name="skip">跳过</string>
    <string name="next">下一步</string>

    <string name="book_0_title">书籍出售</string>
    <string name="book_0_money">5r/本</string>
    <string name="book_0_delivery">是否可以配送：是</string>
    <string name="book_0_new">书籍状态：九成新</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>