<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            android:background="@color/huster">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Details"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/product_image"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/book_4"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:src="@mipmap/money"/>
                <TextView
                    android:id="@+id/product_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_0_money"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Details_1"
                android:textStyle="normal"
                android:textSize="20dp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Details_2"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Details_6"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/product_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/Details_7"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/product_state_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Details_3"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/product_state_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Details_4"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/product_state_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Details_5"
                android:textColor="@color/black"/>

        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/add_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button"
        android:text="@string/add"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:padding="12dp"
        android:layout_margin="20dp"
        android:layout_alignParentRight="true"/>


</RelativeLayout>