<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginActivity">
    <View
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:src="@mipmap/img" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_log">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/Login"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/Login"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit"
                android:background="@drawable/login_et_bt">

                <ImageView
                    android:layout_margin="10dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/user"/>
                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:hint="@string/Login_hint"
                    android:inputType="textVisiblePassword"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_et_bt">

                <ImageView
                    android:layout_margin="10dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/password"/>
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:hint="@string/Login_hint_1"
                    android:inputType="numberPassword"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/Login_2"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16dp"/>
            </RelativeLayout>


            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="50dp"
                android:background="@drawable/button_log"
                android:text="@string/Login_3"
                android:gravity="center"
                android:textSize="@dimen/Login"
                android:textStyle="bold"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>