<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:title="@string/Relogin"
            app:navigationIcon="@drawable/baseline_arrow_back_23">
        </androidx.appcompat.widget.Toolbar>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white"
            android:src="@mipmap/img" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/bg_log">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/Login"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/Relogin"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit"
                    android:background="@drawable/login_et_bt">

                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/user"/>
                    <EditText
                        android:id="@+id/et_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:hint="@string/Login_hint"
                        android:inputType="textVisiblePassword"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_et_bt">

                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/password"/>
                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:hint="@string/Login_hint_1"
                        android:inputType="numberPassword"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/tv_relogin"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="30dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_log"
                    android:text="@string/Relogin_1"
                    android:gravity="center"
                    android:textSize="@dimen/Login"
                    android:textStyle="bold"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>