<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:src="@mipmap/book_0"
            android:scaleType="centerCrop"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="19dp"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/book" />
                    <TextView
                        android:id="@+id/product_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_0_title"
                        android:singleLine="true"
                        android:textSize="13dp"
                        android:textStyle="normal"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="19dp"
                        android:src="@mipmap/money" />

                    <TextView
                        android:id="@+id/product_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_0_money"
                        android:layout_gravity="center_vertical"
                        android:textSize="13dp"
                        android:textStyle="normal"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="19dp"
                        android:src="@mipmap/delivery" />
                    <TextView
                        android:id="@+id/product_delivery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/book_0_delivery"
                        android:textSize="13dp"
                        android:textStyle="normal"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="19dp"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/state" />
                    <TextView
                        android:id="@+id/product_state"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/book_0_new"
                        android:textSize="13dp"
                        android:textStyle="normal"/>

                </LinearLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:layout_marginLeft="48dp">

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@color/grey_3"
                    android:gravity="center"
                    android:text="—"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/product_count"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="100" />

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/grey_3"
                    android:gravity="center"
                    android:text="+"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>